# simplydigitals-aicareerassistant

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml
api/: .dockerignore  .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml  pyrightconfig.json
api/app/: main.py  scheduler_worker.py
api/app/pipeline/: daily_scrape.py  graph.py  (+9 more)
api/migrations/: env.py
api/prompts/: interview_pack.md  negotiation.md  outreach.md  resume_generate.md
api/scripts/: migrate_sqlite_to_postgres.py
api/tests/: test_admin_router.py  test_api_client.py  test_applications_pipeline.py  test_applied_jobs.py  test_archive_job.py  test_archive_old_jobs.py  test_audit_logger.py  test_bulk_archive.py  test_bulk_generate_resume.py  test_bulk_rescore.py  test_config_production_guard.py  test_daily_scoring_usage.py  test_daily_scrape.py  test_gemini_client.py  test_generate_resume.py  test_google_drive.py  test_industry_backfill.py  test_industry_filter.py  test_industry_refinement.py  test_interview_endpoints.py  test_job_cleanup.py  test_llm_scorer.py  test_llm_traffic_controller.py  test_llm_usage_logging.py  test_mcf_categories.py  test_migration_008_job_feedback.py  test_migration_022_seniority_target_titles.py  test_pdf_html_parser.py  test_rate_limiter.py  test_rescore_all.py  test_rescore_job.py  test_resume_detail_extractor.py  test_resume_generator.py  test_scheduler_backfill.py  test_score_jobs_by_ids.py  test_score_single_job.py  test_selected_jobs.py  test_sql_compat.py  test_stats.py  test_suspension.py  (+1 more)
(+156 files in other folders)
