[tool.poetry]
name = "aicareercoach"
version = "0.1.0"
description = "Agentic AI Career Assistant"
authors = ["Vasu Pandiri <pandiri.vasu@gmail.com>"]
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
langgraph = "^0.2"
anthropic = "^0.49"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
aiosqlite = "^0.20"
alembic = "^1.13"
pydantic = "^2.9"
pydantic-settings = "^2.5"
httpx = "^0.27"
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
structlog = "^24.4"
python-multipart = "^0.0.9"
playwright = "^1.47"
feedparser = "^6.0"
pyyaml = "^6.0"
tenacity = "^9.0"
apscheduler = "^3.10"
beautifulsoup4 = "^4.12"
lxml = "^5.3"
python-dotenv = "^1.0"
pdfplumber = "^0.11"
python-docx = "^1.1"
gunicorn = "^22.0"
asyncpg = "^0.29"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-mock = "^3.14"
pytest-cov = "^5.0"
respx = "^0.21"
ruff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
